--- a/index.html
+++ b/index.html
@@ -17,10 +17,44 @@
   </head>
   <body>
     <header>
-      <div class="container"></div>
+      <div class="container">
+        <div class="row">
+          <div class="column-full">
+            <strong class="head">Code Journal</strong>
+          </div>
+        </div>
+      </div>
     </header>
     <main class="container">
-      <div data-view="entry-form"></div>
+      <div data-view="entry-form">
+        <form>
+          <div class="row">
+            <div class="column-full">
+              <h1>New Entry</h1>
+            </div>
+          </div>
+          <div class="row">
+            <div class="column-half">
+              <img
+                src="images/placeholder-image-square.jpg"
+                alt="placeholder-image" />
+            </div>
+            <div class="column-half align-input">
+              <label for="title">Title</label>
+              <input type="text" id="title" name="user_title" required />
+              <label for="newUrl">Photo URL</label>
+              <input type="url" id="newUrl" name="user_photo" required />
+            </div>
+            <div class="column-full align-input">
+              <label for="notes" class="user_notes">Notes</label>
+              <textarea id="notes" name="user_notes" rows="10"></textarea>
+            </div>
+            <div class="column-full button-col">
+              <button id="Save-button" name="save">Save</button>
+            </div>
+          </div>
+        </form>
+      </div>
       <div data-view="entries" class="hidden"></div>
     </main>
     <script src="js/data.js"></script>
