working on function to create DOM tree #2

--- a/index.html
+++ b/index.html
@@ -57,22 +57,12 @@
       </div>
       <div data-view="entries" class="hidden">
         <ul>
-          <li>
+          <li class="column-full">
             <img
-              src="https://upload.wikimedia.org/wikipedia/en/a/a6/Pok%C3%A9mon_Pikachu_art.png"
-              class="column-half" />
+              src="https://upload.wikimedia.org/wikipedia/en/a/a6/Pok%C3%A9mon_Pikachu_art.png" />
             <div class="column-half">
               <h2>Pikachu</h2>
               <p>Electric mouse pokemon</p>
-            </div>
-          </li>
-          <li>
-            <img
-              src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/001.png"
-              class="column-half" />
-            <div class="column-half">
-              <h2>Bulbasaur</h2>
-              <p>Seed pokemon</p>
             </div>
           </li>
         </ul>
