editing list css #2

--- a/index.html
+++ b/index.html
@@ -55,11 +55,14 @@
           </div>
         </form>
       </div>
-      <div data-view="entries" class="hidden">
+      <div data-view="entries">
         <ul>
-          <li class="column-full">
-            <img
-              src="https://upload.wikimedia.org/wikipedia/en/a/a6/Pok%C3%A9mon_Pikachu_art.png" />
+          <li class="row">
+            <div class="column-half">
+              <img
+                src="https://upload.wikimedia.org/wikipedia/en/a/a6/Pok%C3%A9mon_Pikachu_art.png"
+                class="column-half" />
+            </div>
             <div class="column-half">
               <h2>Pikachu</h2>
               <p>Electric mouse pokemon</p>
