--- a/index.html
+++ b/index.html
@@ -58,10 +58,9 @@
       <div data-view="entries">
         <ul>
           <li class="row">
-            <div class="column-half">
+            <div class="column-half view-entry">
               <img
-                src="https://upload.wikimedia.org/wikipedia/en/a/a6/Pok%C3%A9mon_Pikachu_art.png"
-                class="column-half" />
+                src="https://upload.wikimedia.org/wikipedia/en/a/a6/Pok%C3%A9mon_Pikachu_art.png" />
             </div>
             <div class="column-half">
               <h2>Pikachu</h2>
