--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
           </div>
         </form>
       </div>
-      <div data-view="entries">
+      <div data-view="entries" class="hidden">
+        <p class="show">No entries have been recorded</p>
         <ul></ul>
       </div>
     </main>
