completed function viewSwap #2

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         </form>
       </div>
       <div data-view="entries" class="hidden">
+        <h1>Entries</h1>
         <p class="show">No entries have been recorded</p>
         <ul></ul>
       </div>
