--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <div class="row">
           <div class="column-full">
             <strong class="head">Code Journal</strong>
+            <a href="entries" class="click-nav">Entries</a>
           </div>
         </div>
       </div>
@@ -56,6 +57,7 @@
         </form>
       </div>
       <div data-view="entries" class="hidden">
+        <div class="row new-entry-button"><a href="entry-form">New</a></div>
         <h1>Entries</h1>
         <p class="show">No entries have been recorded</p>
         <ul></ul>
