--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
           </div>
           <div class="column-half new-entry-button">
             <a href="#" class="click-new">New</a>
+            <i class="fa-solid fa-pencil hidden"></i>
           </div>
         </div>
         <p id="no-entries">No entries have been recorded</p>
